<resources>
  <string name="app_name">FlickVibes</string>


  <!-- Bottom Navigation Bar -->
  <string name="nav_bar_popular">Popular</string>
  <string name="nav_bar_top_rated">Top Rated</string>
  <string name="nav_bar_upcoming">Upcoming</string>
  <string name="nav_bar_now_playing">Now Playing</string>
  <string name="nav_bar_favourites">Favorites</string>


  <!-- MovieListActivity Menu -->
  <string name="menu_action_search">Search</string>
  <string name="menu_search_hint">Movie..</string>

  <!-- MovieDetailActivity -->
  <string name="trailer_share_intent_title">Share trailer using</string>
  <string name="launch_gallery_intent_title">Complete action using</string>
  <string name="face_detection_failed">Face detection failed</string>

  <!-- MovieListActivity Dialog -->
  <string name="dialog_action_camera">Camera</string>
  <string name="dialog_action_gallery">Gallery</string>
  <string name="dialog_permission_denied">Permission denied</string>
  <string name="launch_gallery">Complete action using</string>
<!-- MovieListFragment -->
  <string name="fragment_empty_favorites">Add Movies to favorites</string>
  <string name="fragment_empty_search">No movies found</string>

  <!--activity_detail_movie.xml -->
  <string name="genre_label">GENRES</string>
  <string name="trailer_label">TRAILERS</string>
  <string name="cast_label">CAST</string>
  <string name="similar_movies_label">SIMILAR MOVIES</string>
  <string name="review_label">REVIEWS</string>
  <string name="storyline_label">StoryLine</string>
  <string name="snackbar_movie_added">Movie added to favorites</string>
  <string name="snackbar_movie_removed">Movie removed from favorites</string>
  <string name="vote_average_format"> %.1f/10</string>
  <!--activity_movie_prediction.xml -->
  <string name="detect_emotions_button">Detect Emotions</string>
  <string name="happy_emotion">You are feeling happy</string>
  <string name="sad_emotion">You are feeling sad</string>
  <string name="normal_emotion">You are feeling normal</string>
  <string name="emotion_error">Error</string>
  <string name="no_faces_detected">No faces detected</string>
  <string name="many_faces_detected">More than one face detected</string>
  <string name="emotions_successfully_detected">Emotions detected</string>
  <string name="go_back_button">Go Back</string>
  <!-- MoviePredictionsActivity -->
  <string name="error">Error finding image</string>
  <!-- dialog_emotion_result -->
  <string name="movie_recommendation_button">Get Movies</string>
  <!-- EmotionMoviesActivity -->
  <string name="emotion_movie_activity_title">Movies for %s feelings</string>
  <!-- widget -->
  <string name="empty_favorite_movies_widget">No favorites movies found</string>
  <string name="favorite_movies_title_widget">Favorite Movies</string>

  <!-- Content Description -->
  <string name="poster_image_view_info">Movie Poster</string>
  <string name="trailer_image_info">Movie Trailer</string>
  <string name="trailer_share_info">Share movie Trailer</string>
  <string name="cast_image_info">Movie Cast</string>
  <string name="review_profile_info">Reviewer</string>
  <string name="expand_collapse_info">Read Full Review</string>
  <string name="release_date_image_info">Release date</string>
  <string name="dialog_camera_info">Take a photo</string>
  <string name="dialog_gallery_info">Choose Image from gallery</string>
  <string name="face_image_view_info">Image to detected using machine learning</string>
  <string name="emotion_image_info">User\'s emotion results</string>
  <string name="appwidget_favorite_icon">Favorite movie</string>
  <string name="emotion_error_image_info">Emotion detection failed</string>
  <string name="empty_layout_image_info">No movies found</string>
</resources>
