<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="200dp"
  android:layout_height="wrap_content"
  app:cardCornerRadius="8dp">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
      android:id="@+id/dialog_camera_image_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="24dp"
      android:contentDescription="@string/dialog_camera_info"
      android:src="@drawable/dialog_camera"
      app:layout_constraintEnd_toStartOf="@+id/dialog_gallery_image_view"
      app:layout_constraintHorizontal_chainStyle="spread_inside"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
    <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="24dp"
      android:text="@string/dialog_action_camera"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/dialog_camera_image_view"
      app:layout_constraintStart_toStartOf="@+id/dialog_camera_image_view"
      app:layout_constraintTop_toBottomOf="@+id/dialog_camera_image_view"/>
    <ImageView
      android:id="@+id/dialog_gallery_image_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:contentDescription="@string/dialog_camera_info"
      android:src="@drawable/dialog_gallery"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/dialog_camera_image_view"
      app:layout_constraintTop_toTopOf="parent"/>
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="24dp"
      android:text="@string/dialog_action_gallery"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/dialog_gallery_image_view"
      app:layout_constraintStart_toStartOf="@+id/dialog_gallery_image_view"
      app:layout_constraintTop_toBottomOf="@+id/dialog_gallery_image_view"/>

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>