<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@android:color/white"
    app:elevation="0dp">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/emotion_toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:paddingEnd="16dp"
      android:paddingStart="6dp"
      app:navigationIcon="@drawable/ic_clear_24dp" />

  </com.google.android.material.appbar.AppBarLayout>



<RelativeLayout
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <TextView
    android:id="@+id/emotion_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_margin="32dp"
    android:layout_alignParentTop="true"
    android:textSize="32sp"
    android:textStyle="bold"
    android:text="@string/emotions_successfully_detected"/>
  <ImageView
    android:id="@+id/emotion_result_image_view"
    android:layout_width="367dp"
    android:layout_height="270dp"
   android:layout_below="@id/emotion_label"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="32dp"
    android:layout_marginBottom="32dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:contentDescription="@string/emotion_image_info"
    tools:src="@drawable/ic_sad_feeling"/>

  <TextView
    android:id="@+id/emotion_results_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_margin="32dp"
    android:layout_below="@id/emotion_result_image_view"
    android:textSize="24sp"
    android:textStyle="bold"
    tools:text="You are feeling sad"/>

  <androidx.cardview.widget.CardView
    android:id="@+id/movie_recommendation_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="48dp"
    android:layout_marginTop="48dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentStart="true"
    app:backgroundTint="@android:color/white"
    app:cardCornerRadius="24dp"
    app:cardElevation="4dp"
    android:foreground="?android:attr/selectableItemBackground">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      android:layout_gravity="center"
      android:text="@string/movie_recommendation_button"
      android:textAllCaps="true"
      android:textColor="@android:color/black"/>
  </androidx.cardview.widget.CardView>
</RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>