<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  android:id="@+id/movie_detail_coordinator_layout"
  tools:context=".ui.activity.MovieDetailActivity">
  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar"
    android:layout_width="match_parent"
    android:layout_height="210dp">
    <com.google.android.material.appbar.CollapsingToolbarLayout
      android:id="@+id/movie_detail_collapsing_tool_bar"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fitsSystemWindows="true"
      app:contentScrim="?attr/colorPrimary"
      app:expandedTitleMarginEnd="48dp"
      app:expandedTitleMarginStart="48dp"
      app:layout_scrollFlags="scroll|exitUntilCollapsed">
      <ImageView
        android:id="@+id/back_drop_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/poster_image_view_info"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        app:layout_collapseMode="parallax"
        tools:src="@drawable/backdrop"/>
      <androidx.appcompat.widget.Toolbar
        android:id="@+id/movie_detail_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin"/>
    </com.google.android.material.appbar.CollapsingToolbarLayout>

  </com.google.android.material.appbar.AppBarLayout>
  <androidx.core.widget.NestedScrollView
    android:id="@+id/nested_scroll_view"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">



      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
          android:id="@+id/view"
          android:layout_width="120dp"
          android:layout_height="90dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>


        <TextView
          android:id="@+id/movie_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:textSize="24sp"
          android:textStyle="bold"
          android:textColor="@color/colorPrimaryText"
          android:textAlignment="center"
          app:layout_constrainedWidth="true"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/view"
          app:layout_constraintTop_toTopOf="parent"
          tools:text="Geem Bhoomba"/>
        <LinearLayout
          android:id="@+id/linearLayout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:paddingStart="8dp"
          android:paddingEnd="8dp"
          android:orientation="horizontal"
          android:layout_gravity="center"
          android:gravity="center"
          app:layout_constraintEnd_toEndOf="@+id/movie_title"
          app:layout_constraintStart_toStartOf="@+id/movie_title"
          app:layout_constraintTop_toBottomOf="@+id/movie_title">

          <TextView
              android:id="@+id/rating_text_view"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:drawablePadding="4dp"
              android:drawableStart="@drawable/ic_star_16dp"
              android:padding="8dp"
              android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
              tools:text="6.6/10"/>
          <View
              android:layout_width="24dp"
              android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/release_date_text_view"
                android:drawableStart="@drawable/ic_calendar_16dp"
                android:drawablePadding="4dp"
                android:textSize="16sp"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="09-06-2016"/>
        </LinearLayout>

        <TextView
          android:id="@+id/storyline_text_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/margin_24dp"
          android:gravity="center"
          android:textAlignment="center"
          app:layout_constrainedWidth="true"
          android:textSize="@dimen/size_20sp"
          android:textColor="@color/colorPrimaryText"
          android:lineSpacingExtra="4dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/storyline_label"
          tools:text="jgjjgjjgjhdjkgjdkjjgdkgdgjdkgjdkjgkdjgkjdkgjdkgjdkgkdjgkdjgkdkgdkjgkdjgkjdgjdkgjkdjgkdjgkjdkgjdkgjdkjgkdjgkdjgdjgkjdkgjdkgkdjkdjgkdkjgkdjgkdjgkdjgkdjkgjdgdkjgkdjgkjdkgjkdjgkdjgkjdgkjdkjgkdjgkdjkjdkjgkdjgkdjgkjdkgjkdjgkdjgkjdkjgkdjgkdgkjdkgjkdjgkjdkgjkdjgkjdkgdkjgkdjgkjdkgjdkjgkdjgkdjgkjdkjgkd"/>
        <TextView
          android:id="@+id/storyline_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/margin_16dp"
          android:text="@string/storyline_label"
          style="@style/Headline"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>


      </androidx.constraintlayout.widget.ConstraintLayout>

      <TextView
        android:id="@+id/genre_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_label"
        style="@style/Headline"/>

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/genre_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

      <TextView
        android:id="@+id/trailer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trailer_label"
        style="@style/Headline"/>

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trailer_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

      <TextView
        android:id="@+id/cast_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cast_label"
        style="@style/Headline"/>


      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cast_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

      <TextView
        android:id="@+id/review_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_label"
        style="@style/Headline"/>

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/review_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      />

    </LinearLayout>


  </androidx.core.widget.NestedScrollView>
  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/favorite_fab_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:src="@drawable/ic_favorite_border_24dp"
    app:fabSize="normal"
    app:layout_anchor="@id/nested_scroll_view"
    app:layout_anchorGravity="bottom|right"/>
  <androidx.cardview.widget.CardView
    android:id="@+id/poster_card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#212121"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true"
    app:layout_anchor="@id/app_bar"
    app:layout_anchorGravity="bottom|left">

    <ImageView
      android:id="@+id/poster_image_view"
      android:layout_width="100dp"
      android:layout_height="150dp"
      android:contentDescription="@string/poster_image_view_info"
      android:scaleType="centerCrop"
      tools:srcCompat="@drawable/poster"/>
  </androidx.cardview.widget.CardView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>